Changelog
=========

1.3.2 (unreleased)
------------------

* Added the defaultFactory handling (needs testing)

* ...


1.3.1 (2012/11/19)
------------------

* Improve actions ``htmlAttributes`` to reflect fields API.

* Improve and fix ``constrainValue`` validation on fields.


1.3 (2012/10/12)
----------------

* Fields now support more options. There is a ``constrainValue``
  method that can be used in addition to ``validate`` (to be
  compatible with ``zope.schema`` fields). An option ``interface`` had
  been added as well, and can be used by other zeam.form components to
  group fields.

* Fields can be created with more options given through their
  constructor.

* Fields and widget now support extra ``htmlAttributes``. They can be
  given to the field constructor, and are rendered automatically by
  the widget.

* Actions supports ``htmlAttributes`` too.

* Update translations.

* Add some backward compatiblity helpers.

1.2.3 (2012/09/24)
------------------

* ``grokcore.chameleon`` is able to negociate i18n by himself. Remove
  the ``i18nLanguage`` attribute that was an hack.

* Refactor how the widgets and extractors are created. This is now
  done via the form data, and is customizable.

1.2.2 (2012/05/02)
------------------

* Update to use the latest ``grokcore.component`` and ``grokcore.view``.

1.2.1 (2012/04/27)
------------------

* Improve the sorting support on components (fields, actions, widgets).

* Add a ``delete`` method to the data manager.

* Now use ``grokcore.chameleon`` instead of ``megrok.chameleon``.

* Add the missing ``static`` to a form default_namespace template.

1.2 (2011/11/08)
----------------

* This version no longer support Zope 2 before 2.12.

* And an helper to know if a field is hidden (so you don't display the
  label).

* Support a callable to know if a field is required (the callable
  takes the form as parameter).

* Add the HTML 5 attribute required by default in the widgets. Use