@@ -6,7 +6,9 @@ Changelog
 
 * Added the defaultFactory handling (needs testing)
 
-* ...
+* Update to newer Versions
+
+* Switch tests to zope.testbrowser.wsgi 
 
 
 1.3.1 (2012/11/19)
